fix style style navbar dark mode

--- a/public/assets/css/dark.css
+++ b/public/assets/css/dark.css
@@ -12,8 +12,12 @@
 
 
 /* Navbar */
+.bg-nav {
+  /* background-color: white; */
+  background-color: linear-gradient(to bottom left, #273748, #021526) !important;
+}
 .dark .bg-nav.scrolled {
-  background: #0D1B2A !important;
+  background-color: #0D1B2A !important;
   box-shadow: var(--mdb-navbar-box-shadow);
 }
 .dark #navbarNav .select2 .select2-selection{
@@ -22,7 +26,7 @@
 
 /* Hero */
 .dark #hero {
-  background: linear-gradient(to bottom left, #273748, #021526) !important;
+  background: linear-gradient(to left, #273748, #021526) !important;
 }
 .dark #hero h1{
   color: #FFFFFF;
@@ -110,10 +114,12 @@
   border: 1px solid #2E4057;
   background-color: #021526 !important;
 }
-.dark #agenda .card h4{
+.dark #agenda .card h4,
+.dark #agenda .swiper h2{
   color: #FFFFFF !important;
 }
-.dark #agenda .card p{
+.dark #agenda .card p,
+.dark #agenda .swiper td{
   color: #DDD !important;
 }
 
