--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -67,11 +67,10 @@ section{
 
 /* Navbar */
 .bg-nav {
-  background: transparent;
+  background-color: white;
   transition: 0.2s ease-in;
 }
 .bg-nav.scrolled {
-  background: #FFFFFF;
   box-shadow: var(--mdb-navbar-box-shadow);
 }
 .nav-link{
@@ -548,12 +547,15 @@ section{
   background-color: #E2EAF7;
 }
 #agenda img {
-  max-width: 100px;
+  width: 80%;
   object-fit: cover;
-  aspect-ratio: 1 / 1;
+  aspect-ratio: 16/9;
 }
 #agenda .agenda-info p{
   font-size: 14px;
+}
+#agenda .swiper .icon{
+  text-align: center;
 }
 @media (max-width: 992px) {
   #agenda img {
